# openenv-hackathon

./: README.md  SETUP.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
client/: dashboard.py  inference.py
openenv_logistics_crisis_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  app.py  environment.py  grader.py
